# Arduino-Clock

./: Cargo.toml  README.md  Ravedude.toml  port.sh
src/: lib.rs  main.rs
src/clock/: mod.rs  time.rs
src/display/: mod.rs  tft.rs
